tests/invalid/raise_unsupported_expression_call_func/main.py
def main() -> None:
    raise (lambda: ValueError)()
